--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
